--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,11 +8,14 @@ kotlinxCoroutines = "1.9.0"
 snapshotTesting = "4.0.8"
 mongodb = "5.1.3"
 junit-jupiter = "5.10.2"
+junit-platfrom  = "1.11.2"
 arrowkt = "1.2.4"
+cucumber = "7.20.1"
 
 [libraries]
 junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit-jupiter" }
 junit-jupiter-params = { module = "org.junit.jupiter:junit-jupiter-params", version.ref = "junit-jupiter" }
+junit-platform-suite = { module = "org.junit.platform:junit-platform-suite", version.ref = "junit-platfrom" }
 
 logback = { group = "ch.qos.logback", name = "logback-classic", version.ref = "logback" }
 logback-logstash = { group = "net.logstash.logback", name = "logstash-logback-encoder", version.ref = "logstashLogbackEncoder" }
@@ -51,3 +54,7 @@ arrowkt-core  = { group = "io.arrow-kt", name = "arrow-core", version.ref = "arr
 arrowkt-fx-coroutines = { group = "io.arrow-kt", name = "arrow-fx-coroutines", version.ref = "arrowkt" }
 arrowkt-optics = { group = "io.arrow-kt", name = "arrow-optics", version.ref = "arrowkt" }
 arrowkt-optics-ksp-plugin = { group = "io.arrow-kt", name = "arrow-optics-ksp-plugin", version.ref = "arrowkt" }
+
+cucumber-java8 = { group = "io.cucumber", name = "cucumber-java8", version.ref = "cucumber" }
+cucumber-junit = { group = "io.cucumber", name = "cucumber-junit-platform-engine", version.ref = "cucumber" }
+cucumber-picocontainer = { group = "io.cucumber", name = "cucumber-picocontainer", version.ref = "cucumber" }
