--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ scripts/.venv/
 .mongo/
 /projection-aggregator/src/test/resources/projection/aggregates/__snapshots__/AssigmentResultsAggregatorTest.snap
 /.kotlin/errors/errors-*.log
+/projection-aggregator/src/test/resources/projection/aggregates/__snapshots__/AssigmentResultsAggregatorTest.snap.debug
